--- a/CMake/folly-config.cmake.in
+++ b/CMake/folly-config.cmake.in
@@ -11,7 +11,9 @@
 @PACKAGE_INIT@
 
 include(CMakeFindDependencyMacro)
-
+if (@USE_HUNTER_BOOST@)
+	find_package(Boost CONFIG REQUIRED)
+endif()
 set_and_check(FOLLY_INCLUDE_DIR "@PACKAGE_INCLUDE_INSTALL_DIR@")
 set_and_check(FOLLY_CMAKE_DIR "@PACKAGE_CMAKE_INSTALL_DIR@")
 
