Fix find_package using android NDK 21 by setting NO_CMAKE_FIND_ROOT_PATH

--- a/CMake/folly-config.cmake.in
+++ b/CMake/folly-config.cmake.in
@@ -12,7 +12,7 @@
 
 include(CMakeFindDependencyMacro)
 if (@USE_HUNTER_BOOST@)
-	find_package(Boost CONFIG REQUIRED)
+	find_package(Boost CONFIG REQUIRED NO_CMAKE_FIND_ROOT_PATH)
 endif()
 set_and_check(FOLLY_INCLUDE_DIR "@PACKAGE_INCLUDE_INSTALL_DIR@")
 set_and_check(FOLLY_CMAKE_DIR "@PACKAGE_CMAKE_INSTALL_DIR@")
